--- a/style.css
+++ b/style.css
@@ -68,3 +68,11 @@ p{
 #copyright{
     color: black;
 }
+#link1{
+    text-decoration: none;
+    color: black;
+    padding: 2px;
+    margin: 2px;
+    border-radius: 7px;
+    background-color: yellow;
+}
